--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -64,6 +64,10 @@
           <th>HDL:</th>
           <td id='hdl'></td>
         </tr>
+        <tr>
+          <th>Profile:</th>
+          <th><a href=http://google.com>Link</a></th>
+        </tr> 
       </table>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
