Open profile in new window

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <th>Profile:</th>
-          <th><a href=http://google.com>Link</a></th>
+          <th><a href=http://google.com target="_blank">Link</a></th>
         </tr> 
       </table>
     </div>
