--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html hidden lang="en">
+<html hidden>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
