--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -29,7 +29,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '7f355a44-8c50-4777-8309-1d6adc82194f',
-        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
